[Reset] Network unnecessary [Update] Readme.txt [Update] Swagger
