# src/swagger_output.json
@@ -5,14 +5,9 @@
     "title": "Manage Users",
     "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
   },
-  "host": "localhost:3000",
+  "host": "localhost:5000",
   "basePath": "/",
-  "tags": [
-    {
-      "name": "User",
-      "description": "Endpoints"
-    }
-  ],
+  "tags": [],
   "schemes": [
     "http"
   ],
@@ -26,7 +21,11 @@
   "paths": {
     "/api/v0/healthCheck": {
       "get": {
-        "tags": [],
+        "tags": [
+          {
+            "name": "HealthCheck"
+          }
+        ],
         "description": "",
         "parameters": [],
         "responses": {
@@ -48,7 +47,11 @@
     },
     "/api/v0/signup": {
       "post": {
-        "tags": [],
+        "tags": [
+          {
+            "name": "User"
+          }
+        ],
         "description": "",
         "parameters": [
           {
@@ -116,7 +119,11 @@
     },
     "/api/v0/users": {
       "get": {
-        "tags": [],
+        "tags": [
+          {
+            "name": "User"
+          }
+        ],
         "description": "",
         "parameters": [
           {
